fix affix on small screen

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -37,3 +37,27 @@
   font-size:2.7vh;
 }
 }
+
+@media(min-width:1200px){
+  .affix {
+      top: 0px;
+	width: 16.667%;
+	  font-family: 'Strasua';
+  }
+}
+
+@media(min-width:992px) and (max-width:1199px){
+  .affix {
+      top: 0px;
+	width: 25%;
+	  font-family: 'Strasua';
+  }
+}
+
+@media(min-width:768px) and (max-width:991px){
+  .affix {
+      top: 0px;
+	width: 50%;
+	  font-family: 'Strasua';
+  }
+}
