--- a/css/style.css
+++ b/css/style.css
@@ -12,14 +12,6 @@
 .left-nav {
 	font-family:'Strasua';
 }
-
-  /* Note: Try to remove the following lines to see the effect of CSS positioning */
-  .affix {
-      top: 0px;
-	width: 16.667%;
-	  font-family: 'Strasua';
-  }
-
 .parallax {
     background-image: url(../images/3x3cube1.jpg);
     height:100%;
